fix: update color property in CodeBlock styles for better readability

--- a/src/components/CodeBlock/CodeBlock.module.css
+++ b/src/components/CodeBlock/CodeBlock.module.css
@@ -102,5 +102,5 @@
 
 .pre {
   padding: 0 var(--space-m);
-  color: rgb(255 255 255);
+  color: white;
 }
